Wed Jun 19 17:17:27 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Fix bypassing inner-variable's value
	  mutation in order to correctly propagate mutation to the
	  outer-variable.
	  Add missing value-domain thinning of inner-variables.

	* lib/adlint/cc1/branch.rb : Fix value-domain thinning condition to
	  thin domains discarded by a break-statement in the iteration.
	* lib/adlint/cc1/environ.rb : Ditto.
	* lib/adlint/cc1/interp.rb : Ditto.
	* lib/adlint/cc1/option.rb : Ditto.

	* features/code_check/W0422.feature : Add scenario to reproduce
	  false-positive of W0422 code check caused by incomplete value-domain
	  thinning.

	* lib/adlint/cc1/builtin.rb : Fix broken `__adlint__eval' builtin debug
	  function.

Mon Jun 17 16:43:32 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/lexer.rb : Add missing comment handling in the initial
	  state of the preprocessing lexer.

	* features/code_check/E0008.feature : Add scenario to reproduce a parse
	  error when a #define directive appears right after a block comment
	  followed by an escaped newline.
	* MANIFEST : Ditto.

Mon Jun 17 15:24:10 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0704.feature : Add scenario to reproduce a parse
	  error when the enumerator name is conflicting with the prior typedef
	  name.
	* MANIFEST : Ditto.

	* lib/adlint/cc1/lexer.rb : Rewrite identifier set to track declared
	  identifiers in preparation for fixing incomplete identifier to
	  typedef name translation.

	* lib/adlint/cc1/parser.y : Fix incomplete identifier to typedef name
	  translation when the declaring enumerator name is conflicting with
	  the prior typedef name.

Thu Jun 13 15:53:21 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Remove unnecessary controlling expression
	  evaluation at entering a do-statement.

	* features/code_check/W9001.feature : Add scenario to reproduce